feat: add new API for retrieve receipt status
